--- a/index.html
+++ b/index.html
@@ -63,6 +63,11 @@
           <h2 class="visually-hidden">Our advantages</h2>
           <ul class="info-section-text">
             <li class="info-one">
+              <div class="icons">
+                <svg class="" width="64" height="64">
+                  <use href="./images/icons.svg#icon-antenna"></use>
+                </svg>
+              </div>
               <h3 class="info-title">Strategy</h3>
               <p class="info-text">
                 Our goal is to identify the business problem to walk away with
@@ -70,6 +75,11 @@
               </p>
             </li>
             <li class="info-one">
+              <div class="icons">
+                <svg class="" width="64" height="64">
+                  <use href="./images/icons.svg#icon-clock"></use>
+                </svg>
+              </div>
               <h3 class="info-title">Punctuality</h3>
               <p class="info-text">
                 Bring the key message to the brand's audience for the best price
@@ -77,6 +87,11 @@
               </p>
             </li>
             <li class="info-one">
+              <div class="icons">
+                <svg class="" width="64" height="64">
+                  <use href="./images/icons.svg#icon-diagram"></use>
+                </svg>
+              </div>
               <h3 class="info-title">Diligence</h3>
               <p class="info-text">
                 Research and confirm brands with the strongest digital growth
@@ -84,6 +99,11 @@
               </p>
             </li>
             <li class="info-one">
+              <div class="icons">
+                <svg class="" width="64" height="64">
+                  <use href="./images/icons.svg#icon-astronaut"></use>
+                </svg>
+              </div>
               <h3 class="info-title">Technologies</h3>
               <p class="info-text">
                 Design practice focused on digital experiences. We bring forth a
@@ -106,6 +126,36 @@
               <div class="team-name">
                 <h3 class="our-team-list">Mark Guerrero</h3>
                 <p class="our-team-text">Product Designer</p>
+                <ul class="team-social">
+                  <li class="team-social-icons">
+                    <a class="team-social-link" href="instagram.com">
+                      <svg class="team-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-social-icons">
+                    <a class="team-social-link" href="twitter.com">
+                      <svg class="team-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-social-icons">
+                    <a class="team-social-link" href="facebook.com">
+                      <svg class="team-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-social-icons">
+                    <a class="team-social-link" href="linkedin.com">
+                      <svg class="team-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="our-team-hero">
@@ -113,6 +163,36 @@
               <div class="team-name">
                 <h3 class="our-team-list">Tom Ford</h3>
                 <p class="our-team-text">Frontend Developer</p>
+                <ul class="team-social">
+                  <li class="team-social-icons">
+                    <a class="team-social-link" href="instagram.com">
+                      <svg class="team-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-social-icons">
+                    <a class="team-social-link" href="twitter.com">
+                      <svg class="team-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-social-icons">
+                    <a class="team-social-link" href="facebook.com">
+                      <svg class="team-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-social-icons">
+                    <a class="team-social-link" href="linkedin.com">
+                      <svg class="team-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="our-team-hero">
@@ -124,6 +204,36 @@
               <div class="team-name">
                 <h3 class="our-team-list">Camila Garcia</h3>
                 <p class="our-team-text">Marketing</p>
+                <ul class="team-social">
+                  <li class="team-social-icons">
+                    <a class="team-social-link" href="instagram.com">
+                      <svg class="team-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-social-icons">
+                    <a class="team-social-link" href="twitter.com">
+                      <svg class="team-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-social-icons">
+                    <a class="team-social-link" href="facebook.com">
+                      <svg class="team-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-social-icons">
+                    <a class="team-social-link" href="linkedin.com">
+                      <svg class="team-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="our-team-hero">
@@ -135,6 +245,36 @@
               <div class="team-name">
                 <h3 class="our-team-list">Daniel Wilson</h3>
                 <p class="our-team-text">UI Designer</p>
+                <ul class="team-social">
+                  <li class="team-social-icons">
+                    <a class="team-social-link" href="instagram.com">
+                      <svg class="team-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-social-icons">
+                    <a class="team-social-link" href="twitter.com">
+                      <svg class="team-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-social-icons">
+                    <a class="team-social-link" href="facebook.com">
+                      <svg class="team-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-social-icons">
+                    <a class="team-social-link" href="linkedin.com">
+                      <svg class="team-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
           </ul>
@@ -145,7 +285,18 @@
           <h2 class="portfolio">Our Portfolio</h2>
           <ul class="portfolio-title">
             <li class="portfolio-info">
-              <img src="./images/BankingApp.jpg" alt="BankingApp" width="360" />
+              <div class="tumba">
+                <img
+                  src="./images/BankingApp.jpg"
+                  alt="BankingApp"
+                  width="360"
+                />
+                <p class="o-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-container">
                 <h3 class="portfolio-list">Banking App</h3>
                 <p class="portfolio-text">App</p>
