--- a/index.html
+++ b/index.html
@@ -303,55 +303,90 @@
               </div>
             </li>
             <li class="portfolio-info">
-              <img
-                src="./images/CashlessPayment.jpg"
-                alt="CashlessPayment"
-                width="360"
-              />
+              <div class="tumba">
+                <img
+                  src="./images/CashlessPayment.jpg"
+                  alt="CashlessPayment"
+                  width="360"
+                />
+                <p class="o-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-container">
                 <h3 class="portfolio-list">Cashless Payment</h3>
                 <p class="portfolio-text">Marketing</p>
               </div>
             </li>
             <li class="portfolio-info">
-              <img
-                src="./images/MeditationApp.jpg"
-                alt="MeditationApp"
-                width="360"
-              />
+              <div class="tumba">
+                <img
+                  src="./images/MeditationApp.jpg"
+                  alt="MeditationApp"
+                  width="360"
+                />
+                <p class="o-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-container">
                 <h3 class="portfolio-list">Meditation App</h3>
                 <p class="portfolio-text">App</p>
               </div>
             </li>
             <li class="portfolio-info">
-              <img
-                src="./images/TaxiService.jpg"
-                alt="TaxiService"
-                width="360"
-              />
+              <div class="tumba">
+                <img
+                  src="./images/TaxiService.jpg"
+                  alt="TaxiService"
+                  width="360"
+                />
+                <p class="o-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-container">
                 <h3 class="portfolio-list">Taxi Service</h3>
                 <p class="portfolio-text">Marketing</p>
               </div>
             </li>
             <li class="portfolio-info">
-              <img
-                src="./images/ScreenIllustrations.jpg"
-                alt="ScreenIllustrations"
-                width="360"
-              />
+              <div class="tumba">
+                <img
+                  src="./images/ScreenIllustrations.jpg"
+                  alt="ScreenIllustrations"
+                  width="360"
+                />
+                <p class="o-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-container">
                 <h3 class="portfolio-list">Screen Illustrations</h3>
                 <p class="portfolio-text">Design</p>
               </div>
             </li>
             <li class="portfolio-info">
-              <img
-                src="./images/OnlineCourses.jpg"
-                alt="OnlineCourses"
-                width="360"
-              />
+              <div class="tumba">
+                <img
+                  src="./images/OnlineCourses.jpg"
+                  alt="OnlineCourses"
+                  width="360"
+                />
+                <p class="o-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-container">
                 <h3 class="portfolio-list">Online Courses</h3>
                 <p class="portfolio-text">Marketing</p>
