--- a/index.html
+++ b/index.html
@@ -397,14 +397,45 @@
       </section>
     </main>
     <footer class="page-footer">
-      <div class="container">
-        <a class="footer-logo" href="./index.html"
-          >Web<span class="logo-part">Studio</span></a
-        >
-        <p class="footer-text">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+      <div class="container-footer">
+        <div class="footer-section-first">
+          <a class="footer-logo" href="./index.html"
+            >Web<span class="logo-part">Studio</span></a
+          >
+          <p class="footer-text">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+        <div class="footer-section-second">
+          <p class="footer-second-text">Social media</p>
+          <ul class="footer-second-item">
+            <li class="footer-item-list">
+              <a class="footer-item-link" href="instagram.com"></a>
+              <svg class="footer-icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-instagram"></use>
+              </svg>
+            </li>
+            <li>
+              <a class="footer-item-link" href="twitter.com"></a>
+              <svg class="footer-icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-twitter"></use>
+              </svg>
+            </li>
+            <li>
+              <a class="footer-item-link" href="facebook.com"></a>
+              <svg class="footer-icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-facebook"></use>
+              </svg>
+            </li>
+            <li>
+              <a class="footer-item-link" href="linkedin.com"></a>
+              <svg class="footer-icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-linkedin"></use>
+              </svg>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
