--- a/index.html
+++ b/index.html
@@ -411,28 +411,33 @@
           <p class="footer-second-text">Social media</p>
           <ul class="footer-second-item">
             <li class="footer-item-list">
-              <a class="footer-item-link" href="instagram.com"></a>
-              <svg class="footer-icon" width="24" height="24">
-                <use href="./images/icons.svg#icon-instagram"></use>
-              </svg>
+              <a class="footer-item-link" href="instagram.com">
+                <svg class="team-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
             </li>
             <li>
-              <a class="footer-item-link" href="twitter.com"></a>
-              <svg class="footer-icon" width="24" height="24">
-                <use href="./images/icons.svg#icon-twitter"></use>
-              </svg>
+              <a class="team-social-link" href="twitter.com">
+                <svg class="team-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
             </li>
             <li>
-              <a class="footer-item-link" href="facebook.com"></a>
-              <svg class="footer-icon" width="24" height="24">
-                <use href="./images/icons.svg#icon-facebook"></use>
-              </svg>
+              <a class="footer-item-link" href="facebook.com">
+                <svg class="footer-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
             </li>
+
             <li>
-              <a class="footer-item-link" href="linkedin.com"></a>
-              <svg class="footer-icon" width="24" height="24">
-                <use href="./images/icons.svg#icon-linkedin"></use>
-              </svg>
+              <a class="footer-item-link" href="linkedin.com">
+                <svg class="footer-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
             </li>
           </ul>
         </div>
