--- a/index.html
+++ b/index.html
@@ -412,14 +412,14 @@
           <ul class="footer-second-item">
             <li class="footer-item-list">
               <a class="footer-item-link" href="instagram.com">
-                <svg class="team-icon" width="24" height="24">
+                <svg class="footer-icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
             <li>
-              <a class="team-social-link" href="twitter.com">
-                <svg class="team-icon" width="24" height="24">
+              <a class="footer-item-link" href="twitter.com">
+                <svg class="footer-icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
               </a>
