--- a/index.html
+++ b/index.html
@@ -417,14 +417,14 @@
                 </svg>
               </a>
             </li>
-            <li>
+            <li class="footer-item-list">
               <a class="footer-item-link" href="twitter.com">
                 <svg class="footer-icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
-            <li>
+            <li class="footer-item-list">
               <a class="footer-item-link" href="facebook.com">
                 <svg class="footer-icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-facebook"></use>
@@ -432,7 +432,7 @@
               </a>
             </li>
 
-            <li>
+            <li class="footer-item-list">
               <a class="footer-item-link" href="linkedin.com">
                 <svg class="footer-icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-linkedin"></use>
